<resources>
    <string name="app_name">Pal Car Washer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="swipe_left_for_register">Swipe Left for Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">Email</string>
    <string name="tag">Let\'s join us and \nClean your car quickly and easily</string>
    <string name="swipe_right_for_login">Click here for Login</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Full Name</string>

    <string name="register_as_customer">Register as customer</string>
    <string name="register_as_company">Register as company</string>
    <string name="did_you_forget_your_password">Did you forget your password?</string>
    <string name="you_don_t_have_an_account">You don\'t have an account?</string>
    <string name="todo">TODO</string>
    <string name="verfiy_your_phone">verify your phone</string>
    <string name="choose_your_country">choose your country</string>
    <string name="birthday_date">Birthday Date</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="enter_the_code_that_was_send">Enter the code that was sent :</string>
    <string name="tap_here_to_edit_your_phone_number">Tap here to edit your phone number</string>
    <string name="pal_car_washer" />
    <string name="pal_car_washer_logo">PAL CAR WASHER</string>

    <string name="owner_name">Owner Name</string>
    <string name="stationary">Stationary</string>
    <string name="mobile">Mobile</string>
    <string name="email_optional">Email (Optional)</string>
    <string name="companytype">CompanyType</string>
    <string name="both">Both</string>
    <string name="new_vehicle_type">New Vehicle Type</string>
    <string name="you_can_add_new_vehicle_type_new_service_or_both">You can add new vehicle type, new Service or both</string>
    <string name="new_service">New Service</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="assign_services_to_each_vehicle_type_that_you_provide">Assign services to each vehicle type that you provide:</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="service">Service</string>
    <string name="service_price_on_this_vehicle_type">Service Price on this Vehicle type</string>
    <string name="description">Description</string>
    <string name="add_services">Add Services</string>
    <string name="currency_type">Currency Type</string>
    <string name="vehicle_size">Vehicle Size</string>
    <string name="service_type">Service Type</string>
    <string name="company_type">Company Type</string>
    <string name="price">Price</string>
    <string name="add_new_service">Add New Service</string>
    <string name="confirm_and_submit">Confirm and Submit</string>
    <string name="working_hours_per_day">Working Hours Per Day</string>
    <string name="open">Open:</string>
    <string name="saterday">Saturday</string>
    <string name="_8_00_am">8:00 AM</string>
    <string name="_6_00_pm">6:00 PM</string>
    <string name="close">Close:</string>
    <string name="select_the_days_you_work_and_then_the_working_time_for_each_day">Select the days you work and then the working time for each day :</string>
    <string name="add_part_time"><u>Add part time</u></string>
    <string name="sunday">Sunday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="tuesday">Tuesday</string>
    <string name="monday">Monday</string>
    <string name="wednesday">Wednesday</string>


    <string name="save_location">Save location</string>
    <string name="map_key" translatable="false">AIzaSyA6PuOAmal2_WM4IWo8Ekj8_PtXOUdC19o</string>


    <string name="linktosite">By clicking on register,you will agreed to our terms and that you have read our
         <a href="https://privacyterms.io/view/7f5WZeKN-KY2xxTrG-KXXPZA/">Terms and Conditions</a>
    </string>
    <string name="you_must_upload_a_picture_of_your_laundry_licence_here">You must upload a picture of your laundry licence here :</string>
    <string name="upload_logo_for_you_company">Upload logo for you company !</string>
    <string name="select_picture">select Picture</string>
    <string name="next">Next</string>
    <string name="first_name">First Name</string>
    <string name="second_name">Second Name</string>
    <string name="third_name">Third Name</string>
    <string name="fourth_name">Fourth Name</string>
    <string name="account_number">Account number</string>
    <string name="bank_account_information">Bank Account Information:</string>
    <string name="id_number">ID Number</string>
    <string name="verify_your_account">Verify Your Account</string>
    <string name="home">Home</string>
    <string name="orders">Orders</string>
    <string name="wallet">Wallet</string>
    <string name="profile">Profile</string>
    <string name="company_logo">company Logo</string>
    <string name="company_name">Company Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="company_owner">Company Owner</string>
    <string name="save_modification">Save Modification</string>
    <string name="edit_my_information">Edit My Information :</string>
    <string name="full_name">Full Name</string>
    <string name="birthday_date2">Birthday Date :</string>
    <string name="click_to_back">Click To Back</string>
    <string name="full_name2">Full Name:</string>
    <string name="address_optional_for_mobile_washing">Address(Optional For Mobile Washing)</string>
    <string name="save_selection">Save Selection</string>
    <string name="select_arrival_time">Select Arrival Time</string>
    <string name="total_price">TOTAL PRICE:</string>
    <string name="_0_0">0.0</string>
    <string name="dolarSign">$</string>
    <string name="how_would_you_rate_our_app_experience">How Would You Rate Our App Experience ?</string>
    <string name="your_rating_will_appear_here">Your Rating will Appear Here</string>
    <string name="submit">submit</string>
    <string name="go_to_map">Go to Map</string>
    <string name="now_we_need_your_company_location">Now we need your company location :</string>
    <string name="cash">Cash</string>
    <string name="paypal">PayPal</string>
    <string name="select_payment_method">Select Payment Method</string>
    <string name="edit_my_profile">Edit My Profile</string>
    <string name="app_rate">App Rate</string>
    <string name="logout">Logout</string>
    <string name="account">Account</string>
    <string name="order_id">Order ID:</string>
    <string name="vehicle_size2">Vehicle Size:</string>
    <string name="services">Services:</string>
    <string name="payment_type">Payment Type:</string>
    <string name="order_type">Order Type:</string>
    <string name="cleaning_address">Cleaning Address:</string>
    <string name="cancel_this_order">Cancel this Order</string>
    <string name="data_amp_time"><![CDATA[Data & Time:]]></string>
    <string name="click_back_to_return">Click Back to Return</string>
    <string name="apply">Apply</string>
    <string name="price_descending">Price Descending</string>
    <string name="price_ascending">Price Ascending</string>
    <string name="ratting">Rating</string>
    <string name="filter_view_according_to">Filter View according to:</string>
    <string name="status">Status:</string>
    <string name="show_more_details">Show more details</string>
    <string name="amount">Amount</string>
    <string name="take_the_order">Take the Order</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="upcoming_orders">Upcoming Orders</string>
    <string name="confirmed_orders">Confirmed Orders</string>
    <string name="completed_orders">Completed Orders</string>
    <string name="canceled_orders">Canceled Orders</string>
    <string name="total_price_ascending">Total Price Ascending</string>
    <string name="all">All</string>
    <string name="time_from_oldest_to_newest">Time(Oldest to Newest)</string>
    <string name="view">View:</string>
    <string name="filter">Filter:</string>
    <string name="time_from_newest_to_oldest">Time(Newest to Oldest)</string>
    <string name="order_type2">Order Type:</string>
    <string name="edit_services_provided_by_the_company">Edit services provided by the company</string>
    <string name="delete">Delete</string>
    <string name="working_hours">Working Hours</string>
    <string name="comments_and_feedback">Comments and feedback</string>
    <string name="no_comments_yet">NO COMMENTS YET ..!</string>
    <string name="customer_name">customer name</string>
    <string name="comment">comment</string>
    <string name="the_dept_is_cased_by_canceled_orders_with_cash_payment_method_it_must_not_exceed_100_or_you_will_be_banned_from_the_application_if_you_want_to_pay_you_must_go_to_the_bank_and_pay_the_required_amount_into_the_application_account_or_you_can_use_the_visa_card_through_the_following_link">The debt is cased by canceled orders with cash payment method, it must not exceed 20$ or you will be banned from the application If you want to pay, you must go to the bank and pay the required amount into the application account, or you can use the Visa card through the following link</string>
    <string name="pay_with_visa"><u>Pay with visa</u></string>

</resources>