<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/border"
    android:layout_margin="7dp">

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_margin="15dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/allerta"
        android:text="@string/status"

        android:textSize="20sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp">

        <RadioButton
            android:id="@+id/confirmed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirmed_orders"
            android:textSize="19sp"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"/>

        <RadioButton
            android:id="@+id/completed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/completed_orders"
            android:textSize="19sp"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"/>

        <RadioButton
            android:id="@+id/canceled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/canceled_orders"
            android:textSize="19sp"
            android:textStyle="bold"
            android:layout_marginBottom="20dp" />

        <RadioButton
            android:id="@+id/all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/all"
            android:textSize="19sp"
            android:textStyle="bold"
            />
    </RadioGroup>

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_margin="15dp"
        android:fontFamily="@font/allerta"
        android:text="@string/order_type2"

        android:textSize="20sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/radioGroup3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp">

        <RadioButton
            android:id="@+id/mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mobile"
            android:textSize="19sp"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"/>

        <RadioButton
            android:id="@+id/stationary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stationary"
            android:textSize="19sp"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"/>

        <RadioButton
            android:id="@+id/both"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/both"
            android:textSize="19sp"
            android:textStyle="bold"
           />


    </RadioGroup>


    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_margin="15dp"

        android:fontFamily="@font/allerta"
        android:text="@string/filter"

        android:textSize="20sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp">

        <RadioButton
            android:id="@+id/timeN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/time_from_newest_to_oldest"
            android:textSize="19sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/timeO"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/time_from_oldest_to_newest"
            android:textSize="19sp"
            android:textStyle="bold" />






    </RadioGroup>


    <Button
        android:id="@+id/aply"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/btn_custom"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/apply"
        android:textColor="@android:color/white" />

</LinearLayout>