<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/border"
    android:layout_margin="7dp">

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_margin="15dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/allerta"
        android:text="@string/filter_view_according_to"

        android:textSize="24sp"
        android:textStyle="bold" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">

        <RadioButton
            android:id="@+id/ratting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ratting"
            android:textSize="19sp"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"/>

        <RadioButton
            android:id="@+id/ascending"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price_ascending"
            android:textSize="19sp"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"/>

        <RadioButton
            android:id="@+id/descending"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price_descending"
            android:textSize="19sp"
            android:textStyle="bold"
            android:layout_marginBottom="20dp" />

    </RadioGroup>

    <Button
        android:id="@+id/aply"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/btn_custom"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/apply"
        android:textColor="@android:color/white" />

</LinearLayout>