<?xml version="1.0" encoding="utf-8"?>



    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
android:background="@drawable/border4"

        android:orientation="vertical"
        android:id="@+id/company_layout"
        android:layout_margin="10dp"
        tools:context=".ServiceDetailsActivity"
        >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="0dp"
            >




            <ImageView
                android:id="@+id/company_logo_logo"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:paddingTop="5dp"
                android:layout_margin="4dp"
                android:contentDescription="@string/company_logo"
                android:src="@drawable/ic_baseline_person_24"
                android:layout_weight="0"/>

            <TextView
                android:id="@+id/company_name_name"
                android:layout_width="wrap_content"
                android:layout_height="79dp"
                android:layout_weight="1"

                android:padding="13dp"
                android:text="@string/company_name"
                android:textAlignment="textStart"
                android:textColor="@color/design_default_color_secondary_variant"
                android:textSize="26sp"

                android:fontFamily="@font/bevan"
                />








        </TableRow>


        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorPrimary"
            android:color="@color/colorPrimary" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/sobsp_checkBox_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">



    </androidx.recyclerview.widget.RecyclerView>


<TableRow
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="30dp">


    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_price"
        android:layout_weight="1"
        />

    <TextView
        android:id="@+id/total_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
            android:text="@string/_0_0"
        android:layout_marginStart="15dp"
        android:layout_weight="1"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dolarSign"

        android:layout_weight="1"
        />
</TableRow>



    <Button
        android:id="@+id/select"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_custom2"
        android:textAllCaps="false"

        android:text="@string/select_arrival_time"


        />




    <Button
        android:id="@+id/next"
        android:layout_width="130dp"
        android:layout_height="40dp"

        android:layout_marginTop="20dp"
      android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:background="@color/design_default_color_secondary_variant"

        android:text="@string/next"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent" />


</LinearLayout>

